ghc-4335c07/testsuite/tests/partial-sigs/should_fail/WildcardInADTContext1.hs
{-# LANGUAGE PartialTypeSignatures, DatatypeContexts #-}
module WildcardInADTContext where

data (Eq a, _) => Foo a = Foo { getFoo :: a }
